--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block titulo %} Laingod {% endblock %}
 {% block contenido %} 
-
+ccc
 
   <nav class="barra navbar navbar-transparent bg-transparent fixed-top" id="barra">
     <div class="container-fluid">
